# stores_map

./: pyproject.toml  readme
my_clases/: store_counter.py
resources/: 14a.dbf  14a.shp  14a.shx  14e.shx  14l.dbf  14l.shp  14l.shx  14m.shx  14sia.dbf  14sia.shp  14sia.shx  14sil.dbf  14sil.shp  14sil.shx  14sip.shp  14sip.shx  denue_inegi_14_.shx  stores_by_ageb.csv
